--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,17 @@ before_install:
 - sudo apt-get install python-fontforge
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
-# - export LD_LIBRARY_PATH=/usr/local/lib
 - pip install git+https://github.com/behdad/fontTools.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
 script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
 branches:
   only:
-    - master
+  - master
 after_script:
 - rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
+env:
+  global:
+    secure: MMlozXGqOz06R1DKwPCvm+D3+oZ397c6tuBArAKWEELcMwY0cYHriqd/ymWVmtcyCGcb3ZcFOouxfuBg9VaJkUe59uFomTkSAukE3JKEe9cazdBjuqxXKWnuc5ocHBSaZA/rVWCEQVW32Cg0HlS9xbWf378INx06sVo0lu58uWs=
